# plt_styler

./: pyproject.toml
PltStyler/: plt_styler.py
PltStyler/default_parameters/: boxplot.json  histogram.json  lineplot.json  scatterplot.json
PltStyler/stylesheets/: bright.json  dark.json  default.json
