[tool.poetry]
name = "PltStyler"
version = "0.0.2"
description = "A collection of stylesheets and default values for Python matplotlib figures."
authors = ["Bela Vogler <bela.vogler@uni-jena.de>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
